# sign-to-text

./: .gitignore  README.md  analyze.py  build.py  build_dataset.py  export_onnx.py  features.py  fix_mirrorable.py  plan.md  predict.py  pyproject.toml  requirements.txt  serve.py  train.py
docs/: label_map.json
raw/: 2K0-2026-05-07T21-46-15-036Z.json  2K0-2026-05-07T21-46-15-560Z.json  2K0-2026-05-07T21-46-15-882Z.json  2K0-2026-05-07T21-46-16-192Z.json  2K0-2026-05-07T21-46-16-832Z.json  2K0-2026-05-07T21-46-17-820Z.json  2K0-2026-05-07T21-46-18-112Z.json  2K0-2026-05-07T21-46-18-475Z.json  2K0-2026-05-07T21-46-18-758Z.json  2K0-2026-05-07T21-46-19-032Z.json  2K0-2026-05-07T21-46-19-343Z.json  2K0-2026-05-07T21-46-19-672Z.json  2K0-2026-05-07T21-46-19-972Z.json  2K0-2026-05-07T21-46-20-352Z.json  2K0-2026-05-07T21-46-20-652Z.json  2K0-2026-05-07T21-46-20-982Z.json  2K0-2026-05-07T21-46-21-282Z.json  2K0-2026-05-07T21-46-21-572Z.json  2K0-2026-05-07T21-46-21-892Z.json  2K0-2026-05-07T21-46-22-182Z.json  2K0-2026-05-07T21-46-22-442Z.json  2K0-2026-05-07T21-46-22-752Z.json  2K0-2026-05-07T21-46-23-032Z.json  2K0-2026-05-07T21-46-23-362Z.json  2K0-2026-05-07T21-46-23-672Z.json  2K0-2026-05-07T21-46-23-972Z.json  2K0-2026-05-07T21-46-24-242Z.json  2K0-2026-05-07T21-46-24-612Z.json  2K0-2026-05-07T21-46-24-952Z.json  2K0-2026-05-07T21-46-25-242Z.json  2K0-2026-05-07T21-46-25-563Z.json  2K4-2026-05-07T22-08-59-988Z.json  2K4-2026-05-07T22-09-00-867Z.json  2K4-2026-05-07T22-09-01-159Z.json  2K4-2026-05-07T22-09-01-444Z.json  2K4-2026-05-07T22-09-01-712Z.json  (+1245 more)
(+7 files in other folders)
