[tool.poetry]
name = "sign-to-text-model"
version = "0.1.0"
description = "Arabic Sign Language recognition using MediaPipe hand landmarks and classical ML"
authors = ["ToYoNiX"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.100"
uvicorn = { version = ">=0.20", extras = ["standard"] }
numpy = ">=1.24"
joblib = ">=1.3"
scikit-learn = ">=1.3"
skl2onnx = ">=1.16"
onnxruntime = ">=1.16"
matplotlib = ">=3.7"
seaborn = ">=0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
